--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build_and_test:
+  build:
     docker:
       - image: circleci/node:7.10
 
@@ -24,9 +24,9 @@ jobs:
 
       - run: yarn test
 
-  deploy:
-   name: Deploy Master to K8S
-   command: |
-    if [ "${CIRCLE_BRANCH}" == "master" ]; then
-     ./deploy.sh
-    fi
+      - deploy:
+         name: Deploy Master to K8S
+         command: |
+           if [ "${CIRCLE_BRANCH}" == "master" ]; then
+             ./deploy.sh
+           fi
