--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,4 +30,6 @@ jobs:
            if [ "${CIRCLE_BRANCH}" == "master" ]; then
              chmod +x ./deploy.sh
              ./deploy.sh
+           else
+             echo "Not master branch - no deployment"
            fi
